[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "mst"
authors = [{name = "Andrew Blair", email = "andrew.blair@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy>=1.21.2","pytest>=3.0"]

[project.urls]
Home = "https://github.com/apblair/project3"
